<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:app="http://schemas.android.com/apk/res-auto"
	  xmlns:tools="http://schemas.android.com/tools"
	  tools:context="net.basic_law.newsreader.ItemDetailActivity">
	<item
		android:id="@+id/action_home"
		android:orderInCategory="100"
		android:title="@string/action_home"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_profile"
		android:orderInCategory="100"
		android:title="@string/action_profile"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_bookmarks"
		android:orderInCategory="100"
		android:title="@string/action_bookmarks"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_exit"
		android:orderInCategory="100"
		android:title="@string/action_exit"
		app:showAsAction="never"/>
</menu>
