<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:layout_width="fill_parent"
			  android:layout_height="fill_parent"
			  android:orientation="horizontal">

	<ImageView
		android:id="@+id/item_thumbnail"
		android:layout_width="50dp"
		android:layout_height="50dp"
		android:layout_margin="5dp"
		android:adjustViewBounds="false" />

	<LinearLayout
				  android:layout_width="fill_parent"
				  android:layout_height="wrap_content"
				  android:layout_margin="5dp"
				  android:orientation="vertical">

		<TextView
			android:id="@+id/item_title"
			android:layout_width="fill_parent"
			android:layout_height="21dp"
			android:text="@string/placeholder_title"
			android:textSize="18sp"
			android:textStyle="bold"/>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="right"
			android:layout_marginTop="5dp"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/item_pubDate"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/placeholder_pubDate"
				android:textSize="12sp"/>

			<TextView
				android:id="@+id/item_source"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"
				android:text="@string/placeholder_source"
				android:textSize="12sp"/>

			<TextView
				android:id="@+id/item_category"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"
				android:text="@string/placeholder_category"
				android:textSize="12sp"/>
		</LinearLayout>

	</LinearLayout>
</LinearLayout>